# CPH351-Koreatech-CMake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CUDA_Histogram/: CMakeLists.txt  Histotram.cu
CUDA_Lecture1/: CMakeLists.txt  CheckDim.cu  HelloCUDA.cu  VectorSum.cu
CUDA_Lecture2/: CMakeLists.txt  MatMul_singleBlock.cu
CUDA_Lecture4/: CMakeLists.txt  CUDA_Event.cu  Stream.cu  ThreadCounting.cu
CUDA_Lecture5/: CMakeLists.txt  DeviceQuery.cu
CUDA_MatrixAdd/: CMakeLists.txt  MatAdd.cu  kernelCall.h  main.cu
CUDA_MatrixMul/: CMakeLists.txt  MatMul.cu
CUDA_Trapezodial/: CMakeLists.txt  Trap.cu
CUDA_VectorSum/: CMakeLists.txt  vecSum.cu
CryptoImage/: CMakeLists.txt
CryptoImage/Encryptor/: main.cpp
CryptoImage/Lab_CryptoImg/: DS_timer.h  main.cpp  parameters.h
CryptoImage/Src/: ImageEncryptor.cpp  ImageEncryptor.h  ImageLoader.cpp  ImageLoader.h  ImageViewer.cpp  ImageViewer.h
CryptoImage/Viewer/: main.cpp
DSTimer/: CMakeLists.txt  DS_timer.cpp  DS_timer.h
HelloOpenMP/: CMakeLists.txt  HelloOpenMP.cpp  README.md
Lab_OpenMP_MatMul/: CMakeLists.txt  DS_definitions.h  main.cpp
OpenMP_Histogram/: CMakeLists.txt  Histogram.cpp  Parameters.h  README.md
OpenMP_Lecture1/: After_PrivateClause.cpp  CMakeLists.txt  If_caluse.cpp  LoopConst_implicitBar.cpp  Loop_construct.cpp  Private_clause.cpp  Private_error.cpp  README.md  ScopeOfVar_1.cpp  ScopeOfVar_2.cpp  ScopeOfVar_3.cpp  Section_construct.cpp  Shared_Priavte_Clauses.cpp  Shared_clause.cpp  Single_construct.cpp  VecSum.cpp  VecSum_loopConst.cpp  firstPrivate.cpp  lastPrivate.cpp  lastPrivate2.cpp  nowait.cpp
OpenMP_Lecture2/: Atomic.cpp  Barrier.cpp  Barrier_Step.cpp  CMakeLists.txt  Producer_Consumer.cpp  README.md  Trapezodial_Critical_Locking.cpp
OpenMP_Lecture3/: CMakeLists.txt  Dynamic_scheduling.cpp  Guided_scheduling.cpp  Nested_Parallelism.cpp  README.md  Static_scheduling.cpp  Trapezodial_reduction.cpp
OpenMP_MatMulVet/: CMakeLists.txt  MatMulVec.cpp  README.md
OpenMP_Trapezoidal/: CMakeLists.txt  README.md  Trapezoidal.cpp
OpenMP_VectorSum/: CMakeLists.txt  VecSumFirst.cpp
